client/src/App.css
/* Global Styles */
:root {
  --primary-color: #222222;
  --dark-color: #343a40;
  --light-color: #f4f4f4;
  --danger-color: #dc3545;
  --success-color: #28a745;
  font-family: 'Inter', sans-serif;
}

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

body {
  font-family: "Raleway", sans-serif;
  font-size: 1rem;

  line-height: 1.6;
  /* background-color: #4F3130; */
    background-color: #222222;

  color: #333;
}

a {
  color: var(--primary-color);
  text-decoration: none;
}

ul {
  list-style: none;
}

img {
  width: 100%;
}

/* Utilities */
.container {
  max-width: 12000px;
  margin: auto;
  padding: 0 2rem;
}

/* Text Styles*/
.x-large {
  font-size: 4rem;
  line-height: 1.2;
  margin-bottom: 1rem;
}

.large {
  font-size: 3rem;
  line-height: 1.2;
  margin-bottom: 1rem;
}

.lead {
  font-size: 1.5rem;
  margin-bottom: 1rem;
}

.text-center {
  text-align: center;
}

.text-primary {
  color: white;
  font-size: 1.2rem;
}
.text-secondary {
  color: grey;
}
.text-dark {
  color: var(--dark-color);
}

/* Padding */
.p {
  padding: 0.5rem;
}
.p-1 {
  padding: 1rem;
}
.p-2 {
  padding: 2rem;
}
.p-3 {
  padding: 3rem;
}
.py {
  padding: 0.5rem 0;
}
.py-1 {
  padding: 1rem 0;
}
.py-2 {
  padding: 2rem 0;
}
.py-3 {
  padding: 3rem 0;
}

/* Margin */
.m {
  margin: 0.5rem;
}
.m-1 {
  margin: 1rem;
}
.m-2 {
  margin: 2rem;
}
.m-3 {
  margin: 3rem;
}
.my {
  margin: 0.5rem 0;
}
.my-1 {
  margin: 1rem 0;
}
.my-2 {
  margin: 2rem 0;
}
.my-3 {
  margin: 3rem 0;
}

.btn {
  display: inline-block;
  background: var(--light-color);
  color: #333;
  padding: 0.4rem 1.3rem;
  font-size: 1rem;
  border: none;
  cursor: pointer;
  margin-right: 0.5rem;
  transition: opacity 0.2s ease-in;
  outline: none;
}

.badge {
  font-size: 0.8rem;
  padding: 0.1rem;
  text-align: center;
  margin: 0.3rem;
  background: var(--light-color);
  color: #333;
}

.alert {
  padding: 0.8rem;
  margin: 1rem 0;
  opacity: 0.9;
  background: var(--light-color);
  color: #333;
}

.btn-primary,
.bg-primary,
.badge-primary,
.alert-primary {
  background: var(--primary-color);
  color: #fff;
}

.btn-light,
.bg-light,
.badge-light,
.alert-light {
  background: var(--light-color);
  color: #333;
}

.btn-dark,
.bg-dark,
.badge-dark,
.alert-dark {
  background: var(--dark-color);
  color: #fff;
}

.btn-danger,
.bg-danger,
.badge-danger,
.alert-danger {
  background: var(--danger-color);
  color: #fff;
}

.btn-success,
.bg-success,
.badge-success,
.alert-success {
  background: var(--success-color);
  color: #fff;
}

.btn-white,
.bg-white,
.badge-white,
.alert-white {
  background: #fff;
  color: #333;
  border: #ccc solid 1px;
}

.btn:hover {
  opacity: 0.8;
}

.bg-light,
.badge-light {
  border: #ccc solid 1px;
}

.round-img {
  border-radius: 50%;
}

.line {
  height: 1px;
  background: #ccc;
  margin: 1.5rem 0;
}

/* Overlay */
.dark-overlay {
  background-color: rgba(0, 0, 0, 0.7);
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

/* Forms */
.form .form-group {
  margin: 1.2rem 0;
}

.auth-form {
  position: absolute;
  margin-left: 50vh;
  margin-top: 30vh;
  width: 40vh;
}

.form .form-text {
  display: block;
  margin-top: 0.3rem;
  color: #888;
}

.form input[type="text"],
.form input[type="email"],
.form input[type="password"],
.form input[type="date"],
.form select,
.form textarea {
  display: block;
  width: 100%;
  padding: 0.4rem;
  font-size: 1.2rem;
  border: 1px solid #ccc;
}

.form input[type="submit"],
button {
  font: inherit;
}

.form .social-input {
  display: flex;
}

.form .social-input i {
  padding: 0.5rem;
  width: 4rem;
}

.form .social-input i.fa-twitter {
  color: #38a1f3;
}
.form .social-input i.fa-facebook {
  color: #3b5998;
}
.form .social-input i.fa-instagram {
  color: #3f729b;
}
.form .social-input i.fa-youtube {
  color: #c4302b;
}
.form .social-input i.fa-linkedin {
  color: #0077b5;
}

.table th,
.table td {
  padding: 1rem;
  text-align: left;
}

.table th {
  background: var(--light-color);
}

/* Navbar */
.navbar {
  display: flex;
  justify-content: space-between;
  flex-direction: column;
  align-items: center;
  padding: 0.7rem 2rem;
  position: fixed;
  z-index: 1;
  /* width: 100%; */
  margin: 3vh 0vh 3vh 3vh;
  opacity: 0.9;
  height: 10vh;
}

.navbar ul {
  display: flex;
}

.navbar a {
  color: #fff;
  padding: 0.45rem;
  margin: 0 0.25rem;
}

.navbar a:hover {
  color: var(--primary-color);
}

.navbar .welcome span {
  margin-right: 0.6rem;
}

/* Landing Page */
.landing {
  position: relative;
  background: url("./img/logo.png") no-repeat center center/cover;
  height: 90vh;
}

.landing-inner {
  color: #fff;
  height: 100%;
  width: 80%;
  margin: auto;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  text-align: center;
}

.landing-about{
  display:flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: center;
  padding-right: 3vh;
  padding-top: 3vh;
  width:40%;
}
.vid-container{
  width:60%;
  height:auto;
}

.auth {
  position: relative;
  height: 100vh;
}

/* Profiles Page */


.buttons {
  margin-top: 60vh;
  justify-content: flex-end;
}

/* Profile Page */

.profile-img-wrapper {
  width: 300px;
  height: 600px;
}
.profile-img {
  width: 500px;
  height: auto;
}

/* Posts Page */
.post-form .post-form-header {
  background: var(--primary-color);
  padding: 0.5rem;
}

.post {
  display: grid;
  grid-template-columns: 1fr 4fr;
  grid-gap: 2rem;
  align-items: center;
}

.post > div:first-child {
  text-align: center;
}

.post img {
  width: 100px;
}

.post .comment-count {
  background: var(--light-color);
  color: var(--primary-color);
  padding: 0.1rem 0.2rem;
  border-radius: 5px;
  font-size: 0.8rem;
}

.post .post-date {
  color: #aaa;
  font-size: 0.8rem;
  margin-bottom: 0.5rem;
}

.preview-photo {
  max-width: 30vh;
  height: auto;
  box-shadow: 0 0 1px rgba(0, 0, 0, 0.05);
}

.profile-img {
  max-width: 30vh;
  height: auto;
  margin: auto;
  box-shadow: 0 0 1px rgba(0, 0, 0, 0.05);
}

.blank-card {
  width: 15vh;
  height: auto;
  margin: auto;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-content: center;
  background-color: 222222;
}

#photo {
  opacity: 0;
}

.label {
  align-self: center;
}

.btn-pill {
  border-radius: 90px;
}

.watch-form {
  position: fixed;
  max-width: 60vh;
  height: 40vh;
  top: 50%;
  left: 50%;
  border: 3px solid #f1f1f1;
  background-color: blue;
}

/* DashBoard */
.main-container {
  display: flex;
  justify-content: center;
  flex-direction: column;
  text-align: center;
}

.profile-container {
  display: flex;
  align-items: center;
  flex-wrap: wrap;
  text-align: center;
  align-self: center;
  max-width: 96vh;
  justify-content: center;
  border-top: 1px solid white;
}

.watch-card {
  margin-left: 1vh;
  margin-right: 1vh;
  margin-top: 2vh;
  width: 30vh;
  height: 45vh;
}


.bio-container {
  width: 30vh;
  margin: auto;
  margin-bottom: 7vh;
  margin-top: 9vh;
}

.edit-container-open {
  position: fixed;
  right: 0px;
  top: 0px;
  width: 40vh;
  height: 100vh;
  background-color: #2b3131;
}

.add-watch-form{
  margin-top: 15vh;

}

.bio-image-form {
  width: 38vh;
  height: 38vh;
  justify-content: center;
}

.bio-desc-form {
  margin-top: 5vh;
  display: flex;
  flex-direction: column;
  height: fit-content;
}
.save-btn {
  border-radius: 90px;
}

.wrapper {
  width: 150px;
  height: 150px;
  margin: 25px auto;
  overflow: hidden;
  border-radius: 50%;
  position: relative;
}

.wrapper img {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.blur {
  filter: blur(0.2rem);
}

.view-watch {
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  display:flex;
}
/* Browse */
.browse-container{
  display: flex;
  /* align-items: center; */
  flex-wrap: wrap;
  text-align: center;
  align-self: center;
  max-width: 101vh;
  margin-top: 12vh;
}

.profile {
  display: flex;
  flex-direction: column;
  grid-gap: 1rem;
  padding: 1rem;
  margin-bottom: 2vh;
}

.center{
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%);
}

.unstyleButton{
  background: none;
	color: inherit;
	border: none;
	padding: 0;
	font: inherit;
	cursor: pointer;
	outline: inherit;
}

.text-highlighted{
  font-weight: bold;
  font-size:2rem;
}

@media only screen and (max-width: 768px) {
  .view-watch {
    display: flex;
    flex-direction: column;
  }

  .browse-container{
    display: flex;
    flex-direction: column;
    align-items: center;

    flex-wrap: wrap;
    text-align: center;
    align-self: center;
    max-width: 101vh;
    margin-top: 12vh;
  }
  .landing-inner{
    display: flex;
    flex-direction: column;
  }
  .landing-inner :nth-child(1) { order: 2; }
  .landing-inner :nth-child(2) { order: 1; }
  .vid-container{
    width:90vw;
  }
  .text-about{
    font-size: 1rem;
  }
  .landing-about{
    width: 80vw;
  }
  .navbar {
    margin: 1vh 4vh 1vh 2vh;
    opacity: 0.9;
    height: 10vh;
  }
}
.vid-container{
  /* box-shadow: 5px 10px 18px black; */
}
@media only screen and (max-width: 1280px) {
  .view-watch {
    display: flex;
    flex-direction: column;
  }
  .watch-page-info{
    /* width:44vh; */
  }
  .browse-container{
    display: flex;
    align-items: center;
    flex-wrap: wrap;
    text-align: center;
    align-self: center;
    max-width: 101vh;
    margin-top: 12vh;
  }
  .landing-inner{
    display: flex;
    flex-direction: column;
  }
  .landing-inner :nth-child(1) { order: 2; }
  .landing-inner :nth-child(2) { order: 1; }

}

